Fix T51556: Sequencer - White Balance Modifier - Masking is not honored